--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,59 @@
 {
-  "extends": "next/core-web-vitals"
+  "root": true,
+  "extends": [
+    "next/core-web-vitals",
+    "prettier",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "airbnb",
+    "airbnb-typescript",
+    "airbnb/hooks",
+    "plugin:react-hooks/recommended"
+  ],
+  "env": {
+    "browser": true
+  },
+  "globals": {
+    "React": true,
+    "JSX": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": true
+  },
+  "plugins": ["prettier", "import", "@typescript-eslint"],
+  "rules": {
+    "implicit-arrow-linebreak": 0,
+    "operator-linebreak": 0,
+    "no-confusing-arrow": 0,
+    "import/prefer-default-export": 0,
+    "import/no-extraneous-dependencies": 0,
+    "react/react-in-jsx-scope": 0,
+    "react/require-default-props": 0,
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "function-expression"
+      }
+    ],
+    "@typescript-eslint/comma-dangle": "off"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "project": true
+      }
+    }
+  },
+  "ignorePatterns": [".*.js", "node_modules/", "dist/"],
+  "overrides": [
+    {
+      "files": ["*.js?(x)", "*.ts?(x)"]
+    }
+  ]
 }
